[package]
name = "blorp-server"
version = "0.1.0"
edition = "2021"
license = "mit"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
itsdangerous = "0.4.1"
rand = "0.8.5"
redis = { version = "0.22.1", features = ["tokio"] }
serde = "1.0.147"
serde_derive = "1.0.147"
serde_json = "1.0.87"
tokio = { version = "1.21.2", features = ["full"] }
